syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.pix";
option java_outer_classname = "KeyManager";
option objc_class_prefix = "HLW";

package br.com.pix;

service KeyManagerService {
  rpc cadastroChavePix (RegistroChaveRequest) returns (RegistroChaveResponse) {}
}

service KeyManagerRemoveService {
  rpc removerChavePix(RemocaoChaveRequest) returns (RemocaoChaveResponse) {}
}

message RegistroChaveRequest {
  string idCliente = 1;
  enum TipoChave {
    CHAVE_DESCONHECIDA = 0;
    CPF = 1;
    CELULAR = 2;
    EMAIL = 3;
    ALEATORIA = 4;
  }
  TipoChave tipoChave = 2;
  string chave = 3;
  enum TipoConta {
    CONTA_DESCONHECIDA = 0;
    CONTA_CORRENTE = 1;
    CONTA_POUPANCA = 2;
  }
  TipoConta tipoConta = 4;
}

message RegistroChaveResponse {
  string idPix = 1;
  string chavePix = 2;
}

message RemocaoChaveRequest {
  string idPix = 1;
  string idCliente = 2;
}

message RemocaoChaveResponse {
  string idPix = 1;
  string idCliente = 2;
}